RESOLVED FIXED310307
Fix null dereference crash when focus navigates into cross-origin iframe containing a nested remote frame
https://bugs.webkit.org/show_bug.cgi?id=310307
Summary Fix null dereference crash when focus navigates into cross-origin iframe con...
Sean Patterson
Reported 2026-03-19 13:27:19 PDT
Attachments
Sean Patterson
Comment 1 2026-03-19 13:39:07 PDT
Alexey Proskuryakov
Comment 2 2026-03-19 14:24:15 PDT
*** Bug 310305 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 3 2026-03-19 14:24:17 PDT
*** Bug 310306 has been marked as a duplicate of this bug. ***
Sean Patterson
Comment 4 2026-03-20 14:42:48 PDT
EWS
Comment 5 2026-03-20 23:24:18 PDT
Committed 309671@main (91d5f2e29338): <https://commits.webkit.org/309671@main> Reviewed commits have been landed. Closing PR #61040 and removing active labels.
Marta Darbinyan
Comment 6 2026-03-23 10:34:50 PDT
Reopened Bugzilla. NEW TEST(309671@main): [macOS] TestWebKitAPI.FocusWebView.FocusNavigationIntoFrameWithNestedRemoteFrame is constant timeout, tracking revert in https://bugs.webkit.org/show_bug.cgi?id=310548.
Sean Patterson
Comment 7 2026-03-24 14:31:01 PDT
EWS
Comment 8 2026-04-03 17:47:04 PDT
Committed 310547@main (6a158c26f432): <https://commits.webkit.org/310547@main> Reviewed commits have been landed. Closing PR #61269 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.