[Site Isolation] Fix null dereference crash when focus navigates into cross-origin iframe containing a nested remote frame rdar://172564611 https://bugs.webkit.org/show_bug.cgi?id=310307

Reviewed by Megan Gardner.

When findFocusableElementAcrossFocusScope found a candidate with ContinuedSearchInRemoteFrame::Yes,
it did not return early, allowing execution to continue into the Remote frame owner case with a
null currentNode, causing a crash. Also adds null checks for currentNode and currentFrame in the
Remote frame handling path.